syntax = "proto3";

package user;

service UserService {
  // Profile operations
  rpc CreateUserProfile(CreateUserProfileRequest) returns (UserResponse);
  rpc GetUserProfileById(GetUserByIdRequest) returns (UserProfileResponse);
  rpc GetUserProfileByEmail(GetUserByEmailRequest) returns (UserProfileResponse);

  rpc GetUserByIdInternal(GetUserByIdRequest) returns (UserInternalResponse);
  rpc GetAllUsers(Empty) returns (UserListResponse);
}

// Requests
message CreateUserProfileRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string phone = 4;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

// Responses
message ErrorPayload {
  string message = 1;
  int32 code = 2;
}

message UserProfileResponse {
  bool success = 1;
  string message = 2;
  int32 code = 3;
  UserResponse user = 4;          // populated only on success
  ErrorPayload error = 5;         // structured error object
}


message UserResponse {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message UserInternalResponse {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
  string password = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message UserListResponse {
  bool success = 1;
  string message = 2;
  int32 code = 3;
  repeated UserResponse users = 4; // list of users
  ErrorPayload error = 5;          // structured error object
 
}

message Empty {}

